# dgx_top

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  dgx_top.py  pyproject.toml  requirements.txt  start.sh
dgxtop/: __init__.py  app.py  collectors.py  history_store.py  models.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md
tests/: test_actions.py  test_history_store.py  test_rendering.py
