[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dgx-top"
version = "0.1.0"
description = "Terminal dashboard for Docker, host, and NVIDIA GPU monitoring on DGX-style systems."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["docker", "gpu", "monitoring", "nvidia", "terminal", "textual"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Monitoring",
  "Topic :: Utilities",
]
dependencies = [
  "docker>=7.0.0",
  "nvidia-ml-py>=12.0.0",
  "psutil>=5.9.0",
  "rich>=13.7.0",
  "textual>=0.58.0",
]

[project.scripts]
dgx-top = "dgxtop.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dgxtop*"]

[tool.setuptools]
include-package-data = false

[tool.pytest.ini_options]
testpaths = ["tests"]
